# wjh_ipc

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  setup.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: auto-label.yml  block-web-commits.yml  cmake-multi-platform.yml
cmake/: CompileOptions.cmake  Setup.cmake
src/: CMakeLists.txt
src/wjh/: Atomic.hpp  CMakeLists.txt  ProcessId.cpp  ProcessId.hpp  ProcessIdLock.cpp  ProcessIdLock.hpp
src/wjh/detail/: Atomic.hpp
src/wjh/tests/: Atomic_ut.cpp  CMakeLists.txt  ProcessIdLock_ut.cpp  ProcessId_ut.cpp  main.cpp
testing/: doctest.hpp  rapidcheck.hpp
